--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,14 @@ img {
     object-position: center;
 }
 
+.webgl {
+    position: fixed;
+    top: 0;
+    left: 0;
+    outline: none;
+}
+
+
 /* Responsive Media Queries (Mobile-First) */
 /* Phone view: up to 576px */
 @media (max-width: 576px) {
