--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@
 html, body {
     width: 100%;
     height: 100%;
-    background-color: grey;
+    background-color: #000;
     font-family: 'Roboto', system-ui, sans-serif;
     /* smoothing the font */
     -webkit-font-smoothing: antialiased;
@@ -47,6 +47,18 @@ img {
     top: 0;
     left: 0;
     outline: none;
+    z-index: 2;
+}
+
+.marque {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    color: #ff0000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20vw;
 }
 
 
